--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
   </parent>
   <groupId>eu.nets.oss.maven</groupId>
   <artifactId>nets-oss-parent</artifactId>
-  <version>1</version>
+  <version>2-SNAPSHOT</version>
   <packaging>pom</packaging>
   <scm>
     <connection>scm:git:https://github.com/NetsOSS/nets-oss-parent.git</connection>
     <developerConnection>scm:git:https://github.com/NetsOSS/nets-oss-parent.git</developerConnection>
     <url>https://github.com/NetsOSS/nets-parent-oss</url>
-    <tag>nets-oss-parent-1</tag>
+    <tag>HEAD</tag>
   </scm>
   <properties>
     <maven.compiler.source>1.6</maven.compiler.source>
